# haskell_exercises

./: README.md  WC_mod.hs
real_world_haskell/ch01/: WC_mod.hs
real_world_haskell/ch02/: Assign.hs  lastButOne.hs  myDrop.hs
real_world_haskell/ch03/: AlgebraicVector.hs  AltCustomer.hs  BadIndent.hs  BadPattern.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  GlobalVariable.hs  GoodIndent.hs  Guard.hs  Lending.hs  ListADT.hs  LocalFunction.hs  MySecond.hs  NestedLets.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  exercises.hs
real_world_haskell/ch04/: Adler32.hs  EfficientList.hs  Filter.hs  FixLines  FixLines.hi  FixLines.hs  Fold.hs  IntParse.hs  InteractWith  InteractWith.hi  InteractWith.hs  Map.hs  Partial.hs  Plus.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  dlts.hs  exercises.hs
real_world_haskell/ch05/: Concat.hs  Exporting.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hi  SimpleJSON.hs  SimpleResult.hs  Trouble.hs  exercises.hs  mypretty.cabal  simple
real_world_haskell/ch06/: AutomaticDerivation.hs  BrokenClass.hs  DataEither.hs  JSONClass.hs  JSONClassExport.hs  Monomorphism.hs  Newtype.hs  NewtypeDiff.hs  Overlap.hs  SimpleClass.hs  colorderived.hs  eqclasses.hs  exercises.hs  naiveeq.hs  read.hs
real_world_haskell/ch07/: actions2.hs  basicio-nodo.hs  basicio.hs  callingpure.hs  input.txt  return1.hs  return2.hs  return3.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy6.hs
real_world_haskell/ch08/: ElfMagic.hs  Glob.hs  GlobRegex.hs  GlobRegexEither.hs  HighestClose.hs  (+5 more)
(+91 files in other folders)
